--- a/FirstTest/res/values/strings.xml
+++ b/FirstTest/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">First Test</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="button_text">Send</string>
+    <string name="title_activity_show_message">Show Message</string>
 
 </resources>
